k8s/dev/ingress/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1 
kind: GatewayClass 
metadata: 
  name: envoy-gateway-class 
spec: 
  controllerName: gateway.envoyproxy.io/gatewayclass-controller 
---
apiVersion: gateway.networking.k8s.io/v1 
kind: Gateway 
metadata: 
  name: envoy-gateway 
  namespace: envoy-gateway-system 
spec: 
  gatewayClassName: envoy-gateway-class
  listeners:
    - name: https-fullerfamily
      protocol: HTTPS
      port: 443
      hostname: "*.fullerfamily.cc"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: fullerfamily-tls
    - name: https-062625
      protocol: HTTPS
      port: 443
      hostname: "*.062625.xyz"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: 062625-tls
