k8s/dev/ingress/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: planka-route
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: envoy-gateway
  hostnames:
    - "board.062625.xyz"
  rules:
    - backendRefs:
        - name: planka
          namespace: planka
          port: 1337
